# Projet-Bateau-C

RAPPORT/: BOAT RACE.aux  BOAT RACE.out  BOAT RACE.synctex  BOAT RACE.tex  BOAT RACE.toc
appTest/: 0d_1.CMakeDebug.sh  0d_2.buildDebug.sh  0r_1.CMakeRelease.sh  0r_2.buildRelease.sh  CMakeLists.txt  _build.sh  _runCMake.sh  run.sh
appTest/src/: README.txt  bateau.cpp  bateau.hpp  course.cpp  course.hpp  dashboard.cpp  dashboard.hpp  feutricolore.cpp  feutricolore.hpp  jeu.cpp  jeu.hpp  ligne.cpp  ligne.hpp  main.cpp  menu.cpp  menu.hpp  obstacle.cpp  obstacle.hpp  resultdashboard.cpp  resultdashboard.hpp  src.tar.xz
libphysics/include/physics/: common.h  dynamicModel.h  physicsEngine.h  platform_core.h
libphysics/lib/cmake/libphysics/: libphysicsConfig.cmake  libphysicsTargets-debug.cmake  libphysicsTargets-release.cmake  libphysicsTargets.cmake
